# ai-sdr-crew

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  SKILL.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/data/: accounts.jsonl
backend/reports/: eval_report_example.md
backend/src/sdr/: __init__.py  agents_crew.py  app.py  cli.py  config.py  crew.py  data.py  evals.py  qualify.py  research.py  review.py  schemas.py  store.py  tracing.py  write.py
backend/tests/: conftest.py  test_api.py  test_cli.py  test_crew.py  test_evals.py  test_qualify.py  test_write_review.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/accounts/[id]/: page.tsx
frontend/components/: badges.tsx
frontend/lib/: api.ts  sample.ts  types.ts
frontend/public/: .gitkeep
